--- a/src/pages/board/Post.css
+++ b/src/pages/board/Post.css
@@ -1,6 +1,7 @@
 /* Post.css */
 
 .post-container {
+    position: relative;
     width: 1200px;
     margin: 30px auto;
     border: 1px solid #ccc;
@@ -47,3 +48,34 @@
 .post-stat {
     margin: 0 30px 0 30px;
 }
+
+.edit-delete-buttons {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    display: flex;
+    margin-top: 10px;
+}
+
+.btn-edit,
+.btn-delete {
+    margin: 0 5px;
+    padding: 8px 16px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.btn-edit {
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 20px;
+}
+
+.btn-delete {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 8px;
+}
+    
