feat : 게시글 생성 시 사진첨부

--- a/src/pages/board/Post.css
+++ b/src/pages/board/Post.css
@@ -78,3 +78,9 @@
     border: none;
     border-radius: 8px;
 }
+
+.post-image {
+    width: 100%; /* 이미지를 컨테이너에 맞게 조정 */
+    height: auto; /* 가로 비율 유지 */
+    margin-top: 10px; /* 이미지 위에 여백 추가 */
+}
