--- a/src/pages/guestbook/Guestbook.css
+++ b/src/pages/guestbook/Guestbook.css
@@ -1,18 +1,45 @@
+.box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* Add other box styles as needed */
+}
+
+.title {
+  /* Add your title styles here */
+}
+
+.comment-section {
+  width: 100%; /* Take up the full width */
+  max-width: 600px; /* Adjust the maximum width as needed */
+  
+}
+
+.comment {
+  width: 100%; /* Take up the full width */
+  max-width: 600px; /* Adjust the maximum width as needed */
+  /* Add other comment styles as needed */
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.actions {
+  display: flex;
+}
+
+.pagination {
+  /* Add your pagination styles here */
+}
+
 textarea {
-    width: 500px; 
-    height: 40px; 
-    resize: none;
-    float: left;
-    margin-left: 10px;
-  }
+  width: 500px;
+  height: 30px;
+  border: 1px black;
+  resize: none;
+}
 
-  button {
-    height: 40px;
-    margin-left: 10px;
-    margin-bottom: 10px;
-  }
-
-  .title {
-    margin-bottom: 20px;
-    margin-left: 10px;
-  }
+.create {
+  float: right;
+  margin-left: 10px;
+}
