--- a/src/pages/board/Post.css
+++ b/src/pages/board/Post.css
@@ -84,3 +84,74 @@
     height: auto; /* 가로 비율 유지 */
     margin-top: 10px; /* 이미지 위에 여백 추가 */
 }
+
+.comments-container {
+    width: 1200px;
+    margin: 20px auto;
+}
+
+.comment {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 15px;
+    position: relative;
+}
+
+.comment p {
+    margin: 0;
+}
+
+.comment-actions {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    display: flex; /* 추가된 부분 */
+}
+
+.btn-edit,
+.btn-delete {
+    margin: 0 5px;
+    padding: 8px 16px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
+.btn-edit {
+    background-color: #4caf50;
+    color: white;
+    border: none;
+    border-radius: 8px;
+}
+
+.btn-delete {
+    background-color: #f44336;
+    color: white;
+    border: none;
+    border-radius: 8px;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination span {
+    cursor: pointer;
+    padding: 5px 10px;
+    margin: 0 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.pagination span.active {
+    background-color: #007bff;
+    color: #fff;
+    border-color: #007bff;
+}
+
+.pagination-button.disabled {
+    pointer-events: none;
+    color: #ccc;
+}
