--- a/src/layout/TopNav.css
+++ b/src/layout/TopNav.css
@@ -1,22 +1,20 @@
 .top-nav {
 	background-color: #e6e6e6;
 	margin-bottom: 20px;
-}
-
-.top-nav a {
+  }
+  
+  .top-nav a {
 	text-decoration: none;
 	color: inherit;
-	font-weight: bold; /* 글자를 진하게 설정 */
-    
-}
-
-.top-nav .navbar-nav {
+	font-weight: bold;
+  }
+  
+  .top-nav .navbar-nav {
 	max-height: 400px;
 	margin: 10px auto;
-}
-
-.top-nav .navbar-toggler {
-	background-color: #fff; /* Customize your toggler styles */
-}
-
-/* Add more styles as needed */
+  }
+  
+  .top-nav .navbar-toggler {
+	background-color: #fff;
+  }
+  
