--- a/src/pages/board/Board.css
+++ b/src/pages/board/Board.css
@@ -4,3 +4,19 @@
   margin-bottom: 20px;
   padding: 15px;
 }
+
+.status-indicator {
+  margin-left: 10px;
+  padding: 5px;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 14px;
+}
+
+.open {
+  background-color: green;
+}
+
+.closed {
+  background-color: red;
+}
