--- a/src/pages/board/Post.css
+++ b/src/pages/board/Post.css
@@ -155,3 +155,19 @@
     pointer-events: none;
     color: #ccc;
 }
+
+.status-indicator {
+    margin-left: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 14px;
+  }
+  
+  .open {
+    background-color: green; /* 열린 상태의 배경색 */
+  }
+  
+  .closed {
+    background-color: red; /* 닫힌 상태의 배경색 */
+  }
