fix: Comment와 변수명이 겹쳐서 일단 주석 처리

--- a/src/pages/guestbook/Guestbook.css
+++ b/src/pages/guestbook/Guestbook.css
@@ -1,44 +1,44 @@
-.box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* Add other box styles as needed */
-}
+/*.box {*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*  align-items: center;*/
+/*  !* Add other box styles as needed *!*/
+/*}*/
 
-.title {
-  /* Add your title styles here */
-}
+/*.title {*/
+/*  !* Add your title styles here *!*/
+/*}*/
 
-.comment-section {
-  width: 100%; /* Take up the full width */
-  max-width: 600px; /* Adjust the maximum width as needed */
-  
-}
+/*.comment-section {*/
+/*  width: 100%; !* Take up the full width *!*/
+/*  max-width: 600px; !* Adjust the maximum width as needed *!*/
+/*  */
+/*}*/
 
-.comment {
-  width: 100%; /* Take up the full width */
-  /* Add other comment styles as needed */
-  margin-bottom: 10px;
-  display: flex;
-  justify-content: space-between;
-}
+/*.comment {*/
+/*  width: 100%; !* Take up the full width *!*/
+/*  !* Add other comment styles as needed *!*/
+/*  margin-bottom: 10px;*/
+/*  display: flex;*/
+/*  justify-content: space-between;*/
+/*}*/
 
-.actions {
-  display: flex;
-}
+/*.actions {*/
+/*  display: flex;*/
+/*}*/
 
-.pagination {
-}
+/*.pagination {*/
+/*}*/
 
-textarea {
-  width: 500px;
-  height: 35px;
-  resize: none;
-  
-}
+/*textarea {*/
+/*  width: 500px;*/
+/*  height: 35px;*/
+/*  resize: none;*/
+/*  */
+/*}*/
 
-.create {
-  float: right;
-  margin-left: 10px;
-  height: 35px;
-}
+/*.create {*/
+/*  float: right;*/
+/*  margin-left: 10px;*/
+/*  height: 35px;*/
+/*}*/
