fix : 클래스명 변경

--- a/src/pages/guestbook/Guestbook.css
+++ b/src/pages/guestbook/Guestbook.css
@@ -15,7 +15,7 @@
   
 }
 
-.comment {
+.gbComment {
   width: 100%; /* Take up the full width */
   max-width: 600px; /* Adjust the maximum width as needed */
   /* Add other comment styles as needed */
