feat : 채팅 기능 구현

--- a/src/pages/board/Post.css
+++ b/src/pages/board/Post.css
@@ -74,6 +74,11 @@
     color: white;
 }
 
+.btn-chat {
+    background-color: #ffdd00;
+    color: rgb(0, 0, 0);
+}
+
 .post-image {
     width: 100%;
     height: auto;
